# django-fast-api

./: .gitignore  LICENSE  README.md  README.rst  manage.py  publish.sh  setup.cfg  setup.py
.github/workflows/: django.yml
TEST_PROJECT/: asgi.py  settings.py  urls.py  wsgi.py
src/fast_api/: decorators.py  error_handling.py
src/test_api/: apps.py  models.py  serializers.py  urls.py  views.py
src/un_foo/: __init__.py  apps.py  urls.py  views.py
src/un_foo/templates/: foo.html
