[metadata]
name=django-fast-api
version=0.1.12
long_description= file: README.md
author= assem chelli
url = https://github.com/assem-ch/django-fast-api
license=BSD License
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
include_package_data = true


