[metadata]
name=django-fast-api
version=0.1.17
long_description= check the github repo!
author= Assem Chelli
url = https://github.com/assem-ch/django-fast-api
license=BSD License
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
include_package_data = true


